Knowledge-Board/src/main/java/com/example/knowledgeboard/global/error/ErrorResponse.java
package com.example.knowledgeboard.global.error;

import lombok.*;

@Getter
@AllArgsConstructor
@Builder
public class ErrorResponse {

    private int status;

    private String message;
}
